Ignore data files

--- a/examples/findownloader_test.ipynb
+++ b/examples/findownloader_test.ipynb
@@ -28,6 +28,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "9c08a44a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "if not os.path.exists(\"../\" + config.DATA_DIR):\n",
+    "    os.makedirs(\"../\" + config.DATA_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f7f19087",
    "metadata": {},
    "outputs": [],
@@ -37,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e614f6d7",
    "metadata": {},
    "outputs": [
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "11c48159",
    "metadata": {},
    "outputs": [
@@ -107,16 +120,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2016-01-04</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>23.184075</td>\n",
-       "      <td>23.807680</td>\n",
-       "      <td>23.046249</td>\n",
-       "      <td>23.803160</td>\n",
-       "      <td>270597600.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-01-04</td>\n",
        "      <td>COIN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -125,33 +128,43 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>CSCO</td>\n",
-       "      <td>19.774394</td>\n",
-       "      <td>19.796874</td>\n",
-       "      <td>19.392244</td>\n",
-       "      <td>19.789381</td>\n",
+       "      <td>19.774389</td>\n",
+       "      <td>19.796869</td>\n",
+       "      <td>19.392239</td>\n",
+       "      <td>19.789375</td>\n",
        "      <td>35827100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>23.184073</td>\n",
+       "      <td>23.807678</td>\n",
+       "      <td>23.046247</td>\n",
+       "      <td>23.803158</td>\n",
+       "      <td>270597600.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>HON</td>\n",
-       "      <td>79.587455</td>\n",
-       "      <td>80.386310</td>\n",
-       "      <td>79.094046</td>\n",
-       "      <td>80.331482</td>\n",
+       "      <td>79.587462</td>\n",
+       "      <td>80.386318</td>\n",
+       "      <td>79.094053</td>\n",
+       "      <td>80.331490</td>\n",
        "      <td>3504412.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>MSFT</td>\n",
-       "      <td>47.730519</td>\n",
-       "      <td>48.152290</td>\n",
-       "      <td>46.913336</td>\n",
-       "      <td>48.152290</td>\n",
+       "      <td>47.730511</td>\n",
+       "      <td>48.152283</td>\n",
+       "      <td>46.913328</td>\n",
+       "      <td>48.152283</td>\n",
        "      <td>53778000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -167,16 +180,6 @@
        "    <tr>\n",
        "      <th>11315</th>\n",
        "      <td>2024-12-31</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>251.832526</td>\n",
-       "      <td>252.670501</td>\n",
-       "      <td>248.829760</td>\n",
-       "      <td>249.817383</td>\n",
-       "      <td>39480700.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11316</th>\n",
-       "      <td>2024-12-31</td>\n",
        "      <td>COIN</td>\n",
        "      <td>262.970001</td>\n",
        "      <td>263.660004</td>\n",
@@ -185,7 +188,7 @@
        "      <td>5414900.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11317</th>\n",
+       "      <th>11316</th>\n",
        "      <td>2024-12-31</td>\n",
        "      <td>CSCO</td>\n",
        "      <td>58.429092</td>\n",
@@ -193,6 +196,16 @@
        "      <td>57.985102</td>\n",
        "      <td>58.409359</td>\n",
        "      <td>14173000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11317</th>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>251.832511</td>\n",
+       "      <td>252.670486</td>\n",
+       "      <td>248.829744</td>\n",
+       "      <td>249.817368</td>\n",
+       "      <td>39480700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11318</th>\n",
@@ -221,35 +234,35 @@
       ],
       "text/plain": [
        "            Date Ticker        Open        High         Low       Close  \\\n",
-       "0     2016-01-04   AAPL   23.184075   23.807680   23.046249   23.803160   \n",
-       "1     2016-01-04   COIN         NaN         NaN         NaN         NaN   \n",
-       "2     2016-01-04   CSCO   19.774394   19.796874   19.392244   19.789381   \n",
-       "3     2016-01-04    HON   79.587455   80.386310   79.094046   80.331482   \n",
-       "4     2016-01-04   MSFT   47.730519   48.152290   46.913336   48.152290   \n",
+       "0     2016-01-04   COIN         NaN         NaN         NaN         NaN   \n",
+       "1     2016-01-04   CSCO   19.774389   19.796869   19.392239   19.789375   \n",
+       "2     2016-01-04   AAPL   23.184073   23.807678   23.046247   23.803158   \n",
+       "3     2016-01-04    HON   79.587462   80.386318   79.094053   80.331490   \n",
+       "4     2016-01-04   MSFT   47.730511   48.152283   46.913328   48.152283   \n",
        "...          ...    ...         ...         ...         ...         ...   \n",
-       "11315 2024-12-31   AAPL  251.832526  252.670501  248.829760  249.817383   \n",
-       "11316 2024-12-31   COIN  262.970001  263.660004  246.369995  248.300003   \n",
-       "11317 2024-12-31   CSCO   58.429092   58.586955   57.985102   58.409359   \n",
+       "11315 2024-12-31   COIN  262.970001  263.660004  246.369995  248.300003   \n",
+       "11316 2024-12-31   CSCO   58.429092   58.586955   57.985102   58.409359   \n",
+       "11317 2024-12-31   AAPL  251.832511  252.670486  248.829744  249.817368   \n",
        "11318 2024-12-31    HON  224.792235  225.188092  223.258335  223.545319   \n",
        "11319 2024-12-31   MSFT  424.468070  425.095662  419.048902  419.885681   \n",
        "\n",
        "            Volume  \n",
-       "0      270597600.0  \n",
-       "1              NaN  \n",
-       "2       35827100.0  \n",
+       "0              NaN  \n",
+       "1       35827100.0  \n",
+       "2      270597600.0  \n",
        "3        3504412.0  \n",
        "4       53778000.0  \n",
        "...            ...  \n",
-       "11315   39480700.0  \n",
-       "11316    5414900.0  \n",
-       "11317   14173000.0  \n",
+       "11315    5414900.0  \n",
+       "11316   14173000.0  \n",
+       "11317   39480700.0  \n",
        "11318    1936800.0  \n",
        "11319   13246500.0  \n",
        "\n",
        "[11320 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c5ce4db0",
    "metadata": {},
    "outputs": [
@@ -278,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e2411bb5",
    "metadata": {},
    "outputs": [
@@ -324,10 +337,10 @@
        "      <th>0</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>23.184075</td>\n",
-       "      <td>23.807680</td>\n",
-       "      <td>23.046249</td>\n",
-       "      <td>23.803160</td>\n",
+       "      <td>23.184073</td>\n",
+       "      <td>23.807678</td>\n",
+       "      <td>23.046247</td>\n",
+       "      <td>23.803158</td>\n",
        "      <td>270597600.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -344,30 +357,30 @@
        "      <th>2</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>CSCO</td>\n",
-       "      <td>19.774394</td>\n",
-       "      <td>19.796874</td>\n",
-       "      <td>19.392244</td>\n",
-       "      <td>19.789381</td>\n",
+       "      <td>19.774389</td>\n",
+       "      <td>19.796869</td>\n",
+       "      <td>19.392239</td>\n",
+       "      <td>19.789375</td>\n",
        "      <td>35827100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>HON</td>\n",
-       "      <td>79.587455</td>\n",
-       "      <td>80.386310</td>\n",
-       "      <td>79.094046</td>\n",
-       "      <td>80.331482</td>\n",
+       "      <td>79.587462</td>\n",
+       "      <td>80.386318</td>\n",
+       "      <td>79.094053</td>\n",
+       "      <td>80.331490</td>\n",
        "      <td>3504412.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2016-01-04</td>\n",
        "      <td>MSFT</td>\n",
-       "      <td>47.730519</td>\n",
-       "      <td>48.152290</td>\n",
-       "      <td>46.913336</td>\n",
-       "      <td>48.152290</td>\n",
+       "      <td>47.730511</td>\n",
+       "      <td>48.152283</td>\n",
+       "      <td>46.913328</td>\n",
+       "      <td>48.152283</td>\n",
        "      <td>53778000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -384,10 +397,10 @@
        "      <th>11315</th>\n",
        "      <td>2024-12-31</td>\n",
        "      <td>AAPL</td>\n",
-       "      <td>251.832526</td>\n",
-       "      <td>252.670501</td>\n",
-       "      <td>248.829760</td>\n",
-       "      <td>249.817383</td>\n",
+       "      <td>251.832511</td>\n",
+       "      <td>252.670486</td>\n",
+       "      <td>248.829744</td>\n",
+       "      <td>249.817368</td>\n",
        "      <td>39480700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -437,13 +450,13 @@
       ],
       "text/plain": [
        "            Date Ticker        Open        High         Low       Close  \\\n",
-       "0     2016-01-04   AAPL   23.184075   23.807680   23.046249   23.803160   \n",
+       "0     2016-01-04   AAPL   23.184073   23.807678   23.046247   23.803158   \n",
        "1     2016-01-04   COIN         NaN         NaN         NaN         NaN   \n",
-       "2     2016-01-04   CSCO   19.774394   19.796874   19.392244   19.789381   \n",
-       "3     2016-01-04    HON   79.587455   80.386310   79.094046   80.331482   \n",
-       "4     2016-01-04   MSFT   47.730519   48.152290   46.913336   48.152290   \n",
+       "2     2016-01-04   CSCO   19.774389   19.796869   19.392239   19.789375   \n",
+       "3     2016-01-04    HON   79.587462   80.386318   79.094053   80.331490   \n",
+       "4     2016-01-04   MSFT   47.730511   48.152283   46.913328   48.152283   \n",
        "...          ...    ...         ...         ...         ...         ...   \n",
-       "11315 2024-12-31   AAPL  251.832526  252.670501  248.829760  249.817383   \n",
+       "11315 2024-12-31   AAPL  251.832511  252.670486  248.829744  249.817368   \n",
        "11316 2024-12-31   COIN  262.970001  263.660004  246.369995  248.300003   \n",
        "11317 2024-12-31   CSCO   58.429092   58.586955   57.985102   58.409359   \n",
        "11318 2024-12-31    HON  224.792235  225.188092  223.258335  223.545319   \n",
@@ -465,7 +478,7 @@
        "[11320 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
