--- a/examples/findownloader.ipynb
+++ b/examples/findownloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93109692",
    "metadata": {},
    "outputs": [],
@@ -14,21 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a3ea6aeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config import config_tickers\n",
-    "from config import config\n",
-    "\n",
+    "from config import config, config_tickers\n",
     "from preprocessor.findata_downloader import FinancialDataDownloader\n",
     "from visualiser.findata_visualiser import FinancialDataVisualiser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9c08a44a",
    "metadata": {},
    "outputs": [],
@@ -44,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f7f19087",
    "metadata": {},
    "outputs": [],
@@ -54,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e614f6d7",
    "metadata": {},
    "outputs": [
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "11c48159",
    "metadata": {},
    "outputs": [
@@ -814,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c5ce4db0",
    "metadata": {},
    "outputs": [
@@ -832,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e2411bb5",
    "metadata": {},
    "outputs": [
@@ -1581,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e3b5c391",
    "metadata": {},
    "outputs": [
