--- a/examples/finpreprocessor.ipynb
+++ b/examples/finpreprocessor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3bb49f1c",
    "metadata": {},
    "outputs": [],
@@ -14,14 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "da7cbb96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config import config\n",
-    "from config import config_indicators\n",
-    "\n",
+    "from config import config, config_indicators\n",
     "from preprocessor.findata_downloader import FinancialDataDownloader\n",
     "from preprocessor.findata_preprocessor import FinancialDataPreprocessor\n",
     "from visualiser.findata_visualiser import FinancialDataVisualiser"
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ea3a35cd",
    "metadata": {},
    "outputs": [
@@ -48,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7d3dd408",
    "metadata": {},
    "outputs": [
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d2a72f03",
    "metadata": {},
    "outputs": [
@@ -565,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "20e5d1a5",
    "metadata": {},
    "outputs": [
@@ -589,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "22174222",
    "metadata": {},
    "outputs": [
@@ -615,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9e3d2365",
    "metadata": {},
    "outputs": [
@@ -641,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fce7e03f",
    "metadata": {},
    "outputs": [],
@@ -653,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "27c82f97",
    "metadata": {},
    "outputs": [
@@ -676,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6be7ac13",
    "metadata": {},
    "outputs": [
@@ -697,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f0ab186d",
    "metadata": {},
    "outputs": [],
@@ -709,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "673c37b6",
    "metadata": {},
    "outputs": [
