Move visualisation details to config file

--- a/examples/environment_agents.ipynb
+++ b/examples/environment_agents.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "from agents.agent_finrl import FinRLAgent\n",
-    "from config import config, config_indicators\n",
+    "from config import config, config_indicators, config_models\n",
     "from environments.env_finrl import FinRLTradingEnv\n",
     "from preprocessor.findata_preprocessor import FinancialDataPreprocessor\n",
     "from visualiser.findata_visualiser import FinancialDataVisualiser\n",
@@ -148,78 +148,13 @@
     "    :param model: The name of the model to evaluate.\n",
     "    \"\"\"\n",
     "\n",
-    "    if model == \"a2c\":\n",
-    "        x = \"time/iterations\"\n",
-    "        y = [\n",
-    "            \"train/reward\",\n",
-    "            \"train/policy_loss\",\n",
-    "            \"train/entropy_loss\",\n",
-    "            \"train/value_loss\",\n",
-    "        ]\n",
-    "        title = [\n",
-    "            \"Iterations vs Reward\",\n",
-    "            \"Iterations vs Policy Loss\",\n",
-    "            \"Iterations vs Entropy loss\",\n",
-    "            \"Iterations vs Value loss\",\n",
-    "        ]\n",
-    "    elif model == \"ppo\":\n",
-    "        x = \"time/iterations\"\n",
-    "        y = [\n",
-    "            \"train/reward\",\n",
-    "            \"train/policy_gradient_loss\",\n",
-    "            \"train/entropy_loss\",\n",
-    "            \"train/value_loss\",\n",
-    "        ]\n",
-    "        title = [\n",
-    "            \"Iterations vs Reward\",\n",
-    "            \"Iterations vs Policy Gradient Loss\",\n",
-    "            \"Iterations vs Entropy loss\",\n",
-    "            \"Iterations vs Value loss\",\n",
-    "        ]\n",
-    "    elif model == \"ddpg\":\n",
-    "        x = \"time/episodes\"\n",
-    "        y = [\n",
-    "            \"train/reward\",\n",
-    "            \"train/actor_loss\",\n",
-    "            \"train/critic_loss\",\n",
-    "        ]\n",
-    "        title = [\n",
-    "            \"Episodes vs Reward\",\n",
-    "            \"Episodes vs Actor Loss\",\n",
-    "            \"Episodes vs Critic Loss\",\n",
-    "        ]\n",
-    "    elif model == \"td3\":\n",
-    "        x = \"time/episodes\"\n",
-    "        y = [\n",
-    "            \"train/reward\",\n",
-    "            \"train/actor_loss\",\n",
-    "            \"train/critic_loss\",\n",
-    "        ]\n",
-    "        title = [\n",
-    "            \"Episodes vs Reward\",\n",
-    "            \"Episodes vs Actor Loss\",\n",
-    "            \"Episodes vs Critic Loss\",\n",
-    "        ]\n",
-    "    elif model == \"sac\":\n",
-    "        x = \"time/episodes\"\n",
-    "        y = [\n",
-    "            \"train/reward\",\n",
-    "            \"train/actor_loss\",\n",
-    "            \"train/critic_loss\",\n",
-    "            \"train/ent_coef_loss\",\n",
-    "        ]\n",
-    "        title = [\n",
-    "            \"Episodes vs Reward\",\n",
-    "            \"Episodes vs Actor Loss\",\n",
-    "            \"Episodes vs Critic Loss\",\n",
-    "            \"Episodes vs Entropy Coefficient Loss\",\n",
-    "        ]\n",
+    "    visualisation_config = config_models.train_visualisation_config[model]\n",
     "\n",
     "    model_visualiser.evaluate_training(\n",
     "        model,\n",
-    "        x=x,\n",
-    "        y=y,\n",
-    "        title=title,\n",
+    "        x=visualisation_config[\"x\"],\n",
+    "        y=visualisation_config[\"y\"],\n",
+    "        title=visualisation_config[\"title\"],\n",
     "        directory=\"../\" + config.PLOT_DIR,\n",
     "        filename=config.TEST_NAME,\n",
     "    )"
@@ -436,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a170ba",
+   "id": "78912c07",
    "metadata": {},
    "outputs": [],
    "source": []
