--- a/examples/stock_trading.ipynb
+++ b/examples/stock_trading.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "finpreprocessor = FinancialDataPreprocessor(config.START_DATE, config.END_DATE)\n",
     "train_data, trade_data = finpreprocessor.load_train_test_data(\n",
-    "    \"../\" + config.DATA_DIR, config.TEST_NAME\n",
+    "    f\"../{config.DATA_DIR}\", config.TEST_NAME\n",
     ")"
    ]
   },
@@ -108,7 +108,7 @@
    "source": [
     "finvisualiser = FinancialDataVisualiser()\n",
     "finvisualiser.plot_train_test_close_prices(\n",
-    "    train_data, trade_data, \"../\" + config.PLOT_DIR, config.TEST_NAME\n",
+    "    train_data, trade_data, f\"../{config.PLOT_DIR}\", config.TEST_NAME\n",
     ")"
    ]
   },
@@ -263,7 +263,7 @@
     "        model_name,\n",
     "        environment=env_train,\n",
     "        directory=f\"../{config.LOGS_DIR}/stock-trading/{config.TEST_NAME}\",\n",
-    "        use_case=\"stock_trading\",\n",
+    "        use_case=\"stock-trading\",\n",
     "    )\n",
     "\n",
     "    if TRAIN:\n",
