Remove unused code

--- a/examples/backtesting.ipynb
+++ b/examples/backtesting.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "df5e76d0",
    "metadata": {},
    "outputs": [],
@@ -146,23 +146,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model arguments: {'n_steps': 10, 'ent_coef': 0.005, 'learning_rate': 0.0004}\n",
       "Loading model: A2C\n",
       "Model successfully loaded from ../models/portfolio-optimisation/test_a2c\n",
       "Evaluating model: A2C\n",
-      "Model arguments: {'n_steps': 2048, 'ent_coef': 0.005, 'learning_rate': 0.001, 'batch_size': 128}\n",
       "Loading model: PPO\n",
       "Model successfully loaded from ../models/portfolio-optimisation/test_ppo\n",
       "Evaluating model: PPO\n",
-      "Model arguments: {'batch_size': 128, 'buffer_size': 50000, 'learning_rate': 0.001}\n",
       "Loading model: DDPG\n",
       "Model successfully loaded from ../models/portfolio-optimisation/test_ddpg\n",
       "Evaluating model: DDPG\n",
-      "Model arguments: {'batch_size': 100, 'buffer_size': 1000000, 'learning_rate': 0.001}\n",
       "Loading model: TD3\n",
       "Model successfully loaded from ../models/portfolio-optimisation/test_td3\n",
       "Evaluating model: TD3\n",
-      "Model arguments: {'batch_size': 128, 'buffer_size': 1000000, 'learning_rate': 0.0003, 'learning_starts': 100, 'ent_coef': 'auto_0.1'}\n",
       "Loading model: SAC\n",
       "Model successfully loaded from ../models/portfolio-optimisation/test_sac\n",
       "Evaluating model: SAC\n"
@@ -176,13 +171,6 @@
     "    gym_env, _ = environment.get_trade_env()\n",
     "\n",
     "    agent = DRLAgent()\n",
-    "\n",
-    "    model = agent.get_model(\n",
-    "        model_name,\n",
-    "        environment=env_train,\n",
-    "        directory=f\"../{config.LOGS_DIR}/{USE_CASE}/{config.TEST_NAME}\",\n",
-    "        use_case=USE_CASE,\n",
-    "    )\n",
     "\n",
     "    print(f\"Loading model: {model_name.upper()}\")\n",
     "    trained_model = agent.load_model(\n",
@@ -237,13 +225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimising portfolio with strategy: mean\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Optimising portfolio with strategy: mean\n",
       "Optimising portfolio with strategy: min\n",
       "Optimising portfolio with strategy: momentum\n",
       "Optimising portfolio with strategy: equal\n"
@@ -256,7 +238,6 @@
     "\n",
     "    df_account_strat = benchmark.optimise_portfolio(\n",
     "        strategy=strategy,  # type: ignore\n",
-    "        initial_capital=1000000,\n",
     "    )\n",
     "\n",
     "    # Add cumulative returns to the account dataframe\n",
