Fix pylance issues

--- a/examples/backtesting.ipynb
+++ b/examples/backtesting.ipynb
@@ -118,17 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6c09b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "perf_stats = dict()\n",
-    "df_account = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9cf83682",
    "metadata": {},
    "outputs": [],
@@ -165,6 +154,9 @@
     }
    ],
    "source": [
+    "df_account = pd.DataFrame()\n",
+    "perf_stats = dict()\n",
+    "\n",
     "for model_name in config.MODELS:\n",
     "\n",
     "    env_train = environment.get_train_env()\n",
@@ -246,7 +238,7 @@
     "    ).cumprod() - 1\n",
     "\n",
     "    df_account_strat[\"model\"] = strategy.capitalize()\n",
-    "    df_account = pd.concat([df_account, df_account_strat], ignore_index=True)\n",
+    "    df_account = pd.concat([df_account, df_account_strat], ignore_index=True)  # type: ignore\n",
     "\n",
     "    perf_stats_alg = benchmark.compute_perf_stats(df_account_strat)\n",
     "    perf_stats[strategy.capitalize()] = perf_stats_alg  # type: ignore"
