--- a/examples/explainability.ipynb
+++ b/examples/explainability.ipynb
@@ -422,9 +422,9 @@
    "id": "c06bccf0",
    "metadata": {},
    "source": [
-    "### Deep SHAP\n",
+    "### Kernel SHAP\n",
     "\n",
-    "Use Deep SHAP to explain the agent's actions given the policy.\n"
+    "Use Kernel Explainer to explain the agent's actions given the policy.\n"
    ]
   },
   {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "83822638",
    "metadata": {},
    "outputs": [
