--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -44,6 +44,7 @@
 
 \setcounter{secnumdepth}{5}
 \setlength{\marginparwidth}{2cm} % Adjust marginparwidth to avoid todonotes issues
+\renewcommand{\contentsname}{Table of Contents}
 
 \makeglossaries
 \makenomenclature
