Add missing section

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -108,6 +108,7 @@ Given a set of numbers, there are elementary methods to compute its \acrlong{gcd
 \include{contents/background}
 \include{contents/methodology}
 \include{contents/results}
+\include{contents/issues}
 \include{contents/conclusion}
 
 \pagenumbering{roman}
