Add double spacing

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -98,7 +98,7 @@
 
 
 %%%%%% Chapters
-
+\doublespacing
 \section{Glossaries and Acronyms Sample use}
 The \Gls{latex} typesetting markup language is specially suitable for documents that include \gls{maths}. 
 
